Correct spacing at 1024px breakpoint

--- a/style.css
+++ b/style.css
@@ -13,8 +13,15 @@ body {
   background: #000;
 }
 
+header  {
+  height: 200px;
+  position: relative;
+}
+
 header video {
   width: 100%;
+  position: relative;
+  z-index: 0;
 }
 
 .container {
@@ -34,7 +41,7 @@ header video {
 
 header .container {
   position: absolute;
-  top: 170px;
+  bottom: 0;
 }
 
 .last-updated {
@@ -85,12 +92,12 @@ main .container {
   display: grid;
   grid-gap: 15px;
   grid-template-columns: 252px auto; 
-  grid-auto-rows: 300px;
+  grid-auto-rows: 100vh;
   grid-template-areas: 
-    "a b"
-    "a b"
     "a b";
   align-items: start;
+  z-index: 11;
+  position: relative;
 } 
 
 .checkbox-container {
@@ -103,6 +110,11 @@ main .container {
 
 label {
   color: #fff;
+}
+
+main section {
+  border: 1px solid rgba(169, 0, 255, 1);
+  height: 100%
 }
 
 /* ................. */
